unpackaged/main/default/objects/Contact/fields/Authorize_Customer_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>Authorize_Customer_Profile_Id__c</fullName>
    <label>Authorize Customer Profile Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>