unpackaged/main/default/objects/Contact/fields/Current_Vehicle_Driver__c.field-meta.xml
<CustomField>
    <fullName>Current_Vehicle_Driver__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Current Vehicle (Driver)</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>DriverContacts</relationshipName>
    <type>Lookup</type>
</CustomField>