unpackaged/main/default/objects/Contact/fields/Email_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Email_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Confirmed</label>
    <type>Checkbox</type>
</CustomField>