unpackaged/main/default/objects/Contact/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>Password</label>
    <length>40</length>
    <type>Text</type>
</CustomField>