unpackaged/main/default/objects/Contact/fields/what_location_did_you_purchase__c.field-meta.xml
<CustomField>
    <fullName>what_location_did_you_purchase__c</fullName>
    <label>Where did you purchase the bag?</label>
    <length>30</length>
    <type>Text</type>
</CustomField>