unpackaged/main/default/objects/Contact/fields/Where_did_you_learn_about_BullBag__c.field-meta.xml
<CustomField>
    <fullName>Where_did_you_learn_about_BullBag__c</fullName>
    <label>Where did you learn about BullBag?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>From a friend</fullName>
            </value>
            <value>
                <fullName>From a contractor</fullName>
            </value>
            <value>
                <fullName>Saw it at a retailer</fullName>
            </value>
            <value>
                <fullName>Saw it at a show</fullName>
            </value>
            <value>
                <fullName>Saw a BullBag in use</fullName>
            </value>
            <value>
                <fullName>Web search</fullName>
            </value>
            <value>
                <fullName>Online advertisement</fullName>
            </value>
            <value>
                <fullName>Television advertisement</fullName>
            </value>
            <value>
                <fullName>Radio advertisement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>