unpackaged/main/default/objects/Contact/listViews/Coastal.listView-meta.xml
<ListView>
    <fullName>Coastal</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.ADDRESS1_STATE</field>
        <operation>equals</operation>
        <value>la,ms</value>
    </filters>
    <filters>
        <field>Account.Total_Revenue__c</field>
        <operation>greaterThan</operation>
        <value>1</value>
    </filters>
    <label>Coastal</label>
</ListView>