unpackaged/main/default/objects/Contact/listViews/Texas_Commercial_Accounts.listView-meta.xml
<ListView>
    <fullName>Texas_Commercial_Accounts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.OWNER.FIRST_NAME</columns>
    <columns>ACCOUNT.OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.ADDRESS2_STATE</field>
        <operation>contains</operation>
        <value>TX,Texas</value>
    </filters>
    <label>Texas Commercial Accounts</label>
</ListView>